[Gracee] fix: add the att 'grid-auto-columns' to control the width about the overflow columns

--- a/index.css
+++ b/index.css
@@ -117,6 +117,7 @@ body {
 .container-seven {
   grid-template-columns: repeat(3, 100px);
   grid-auto-flow: column dense;
+  grid-auto-columns: 50px;
 }
 
 .container-seven .item-one {
@@ -126,7 +127,7 @@ body {
 
 .container-seven .item-two {
   grid-column-start: 1;
-  grid-column-end: 3;
+  grid-column-end: 6;
 }
 
 
